# ray-tracer

./: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/lib/: visual math.cpp
dependencies/shader/: shader.hpp
modules/camera/: camera.hpp  processInput.hpp
modules/graphics/: DisplayDrawer.hpp  GLFW_setup.hpp
modules/physics/: math_functions.hpp  physics.hpp  rays_and_stars.hpp
shaders/: circle.frag  circle.vert  light.frag  line.frag  line.vert
version/new/: main  main.cpp
version/new/main.dSYM/Contents/Resources/DWARF/: main
version/new/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
version/old/: main  main.cpp
version/old/main.dSYM/Contents/Resources/DWARF/: main
version/old/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
